--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "build": "remix build",
     "dev": "remix dev",
     "postinstall": "remix setup node",
-    "start": "remix-serve build"
+    "start": "remix-serve build",
+    "prepare": "husky install",
+    "commit": "commit"
   },
   "dependencies": {
     "@emotion/cache": "latest",
@@ -22,9 +24,15 @@
     "remix": "latest"
   },
   "devDependencies": {
+    "@commitlint/cli": "^16.2.1",
+    "@commitlint/config-conventional": "^16.2.1",
+    "@commitlint/prompt-cli": "^16.2.1",
     "@remix-run/dev": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "husky": "^7.0.0",
+    "prettier": "^2.5.1",
+    "pretty-quick": "^3.1.3",
     "typescript": "latest"
   },
   "engines": {
