--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "latest",
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "latest",
+    "@prisma/client": "^3.9.2",
     "@remix-run/react": "latest",
     "@remix-run/serve": "latest",
     "react": "latest",
@@ -34,6 +35,7 @@
     "husky": "^7.0.0",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
+    "prisma": "^3.9.2",
     "typescript": "latest"
   },
   "engines": {
