--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "vizblocks",
   "version": "0.1.0",
   "private": true,
+  "prisma": {
+    "seed": "node --require esbuild-register prisma/seed.ts"
+  },
   "scripts": {
     "build": "remix build",
     "dev": "remix dev",
@@ -17,9 +20,10 @@
     "@emotion/styled": "latest",
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "latest",
-    "@prisma/client": "^3.9.2",
+    "@prisma/client": "^3.10.0",
     "@remix-run/react": "latest",
     "@remix-run/serve": "latest",
+    "bcryptjs": "^2.4.3",
     "react": "latest",
     "react-dom": "latest",
     "recharts": "^2.1.9",
@@ -30,8 +34,10 @@
     "@commitlint/config-conventional": "^16.2.1",
     "@commitlint/prompt-cli": "^16.2.1",
     "@remix-run/dev": "latest",
+    "@types/bcryptjs": "^2.4.2",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "esbuild-register": "^3.3.2",
     "husky": "^7.0.0",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
