--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bcryptjs": "^2.4.3",
     "react": "latest",
     "react-dom": "latest",
+    "react-grid-heatmap": "^1.1.0",
     "react-hot-toast": "^2.2.0",
     "recharts": "^2.1.9",
     "remix": "latest",
