feat: download chart & bug fixes

--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@remix-run/react": "latest",
     "@remix-run/serve": "latest",
     "bcryptjs": "^2.4.3",
+    "dom-to-image": "^2.6.0",
+    "js-file-download": "^0.4.12",
     "react": "latest",
     "react-dom": "latest",
     "react-grid-heatmap": "^1.1.0",
@@ -39,6 +41,7 @@
     "@commitlint/prompt-cli": "^16.2.1",
     "@remix-run/dev": "latest",
     "@types/bcryptjs": "^2.4.2",
+    "@types/dom-to-image": "^2.6.4",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "esbuild-register": "^3.3.2",
