--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@prisma/client": "^3.10.0",
     "@remix-run/react": "latest",
     "@remix-run/serve": "latest",
+    "@supabase/supabase-js": "^1.33.3",
     "bcryptjs": "^2.4.3",
     "dom-to-image": "^2.6.0",
     "js-file-download": "^0.4.12",
@@ -48,7 +49,6 @@
     "husky": "^7.0.0",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
-    "prisma": "^3.9.2",
     "typescript": "latest"
   },
   "engines": {
