--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "vizblocks",
   "version": "0.1.0",
   "private": true,
-  "prisma": {
-    "seed": "node --require esbuild-register prisma/seed.ts"
-  },
   "scripts": {
     "build": "remix build",
     "dev": "remix dev",
@@ -21,9 +18,9 @@
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "latest",
     "@mui/x-data-grid": "^5.5.1",
-    "@prisma/client": "^3.10.0",
-    "@remix-run/react": "latest",
-    "@remix-run/serve": "latest",
+    "@remix-run/node": "^1.3.4",
+    "@remix-run/react": "^1.3.4",
+    "@remix-run/vercel": "^1.3.4",
     "@supabase/supabase-js": "^1.33.3",
     "bcryptjs": "^2.4.3",
     "dom-to-image": "^2.6.0",
@@ -41,11 +38,13 @@
     "@commitlint/config-conventional": "^16.2.1",
     "@commitlint/prompt-cli": "^16.2.1",
     "@remix-run/dev": "latest",
+    "@remix-run/eslint-config": "^1.3.4",
+    "@remix-run/serve": "latest",
     "@types/bcryptjs": "^2.4.2",
     "@types/dom-to-image": "^2.6.4",
     "@types/react": "latest",
     "@types/react-dom": "latest",
-    "esbuild-register": "^3.3.2",
+    "eslint": "^8.11.0",
     "husky": "^7.0.0",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
