--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/x-data-grid": "^5.5.1",
     "@remix-run/node": "^1.3.4",
     "@remix-run/react": "^1.3.4",
+    "@remix-run/serve": "^1.3.4",
     "@remix-run/vercel": "^1.3.4",
     "@supabase/supabase-js": "^1.33.3",
     "bcryptjs": "^2.4.3",
@@ -37,9 +38,8 @@
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
     "@commitlint/prompt-cli": "^16.2.1",
-    "@remix-run/dev": "latest",
+    "@remix-run/dev": "^1.3.4",
     "@remix-run/eslint-config": "^1.3.4",
-    "@remix-run/serve": "latest",
     "@types/bcryptjs": "^2.4.2",
     "@types/dom-to-image": "^2.6.4",
     "@types/react": "latest",
