--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@remix-run/serve": "^1.3.4",
     "@remix-run/vercel": "^1.3.4",
     "@supabase/supabase-js": "^1.33.3",
-    "bcryptjs": "^2.4.3",
     "dom-to-image": "^2.6.0",
     "js-file-download": "^0.4.12",
     "react": "latest",
@@ -32,6 +31,8 @@
     "react-hot-toast": "^2.2.0",
     "recharts": "^2.1.9",
     "remix": "latest",
+    "remix-auth": "^3.2.1",
+    "remix-auth-supabase": "^3.1.0",
     "xlsx": "^0.18.3"
   },
   "devDependencies": {
@@ -40,7 +41,6 @@
     "@commitlint/prompt-cli": "^16.2.1",
     "@remix-run/dev": "^1.3.4",
     "@remix-run/eslint-config": "^1.3.4",
-    "@types/bcryptjs": "^2.4.2",
     "@types/dom-to-image": "^2.6.4",
     "@types/react": "latest",
     "@types/react-dom": "latest",
