--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "@supabase/supabase-js": "^1.33.3",
     "dom-to-image": "^2.6.0",
     "js-file-download": "^0.4.12",
+    "pure-react-carousel": "^1.29.0",
     "react": "latest",
     "react-dom": "latest",
     "react-grid-heatmap": "^1.1.0",
     "react-hot-toast": "^2.2.0",
+    "react-swipeable-views": "^0.14.0",
+    "react-swipeable-views-utils": "^0.14.0",
     "recharts": "^2.1.9",
     "remix-auth": "^3.2.1",
     "remix-auth-supabase": "^3.1.0",
@@ -43,6 +46,8 @@
     "@types/dom-to-image": "^2.6.4",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "@types/react-swipeable-views": "^0.13.1",
+    "@types/react-swipeable-views-utils": "^0.13.3",
     "eslint": "^8.11.0",
     "husky": "^7.0.0",
     "prettier": "^2.5.1",
